# learncgo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  vcpkg.json
cmake/: golang.cmake
src/1.getting_started/1.1.hello_go/: CMakeLists.txt
src/1.getting_started/2.1.hello_cgo_embed/: CMakeLists.txt
src/1.getting_started/2.1.hello_cgo_embeded/: CMakeLists.txt  main.go
src/1.getting_started/2.2.hello_cgo_lib/: CMakeLists.txt  lib.c  lib.h  main.go
src/1.getting_started/2.3.hello_cppgo/: lib.cpp  lib.h  main.go
src/1.getting_started/3.1.hello_cstruct/: lib.cpp  lib.h  main.go
src/1.getting_started/3.2.hello_cunion/: lib.cpp  lib.h  main.go
src/1.getting_started/3.3.hello_cunion_ultra/: CMakeLists.txt  lib.h  main.go
src/1.getting_started/3.4.hello_cenum/: lib.h  main.go
src/1.getting_started/3.5.hello_cpointer/: CMakeLists.txt  lib.cpp  lib.h  main.go
src/1.getting_started/3.5.hello_cppclass/: lib.cpp  lib.h  main.go
src/1.getting_started/3.6.hello_cpointer/: lib.cpp  lib.h  main.go
src/1.getting_started/3.6.hello_cppclass/: lib.cpp  lib.h  main.go
src/2.cpplib_exercise/1.1.hello_toml11/: CMakeLists.txt  example.cpp  toml11_lib.cpp  toml11_lib.h
src/2.cpplib_exercise/1.2.c_toml11/: CMakeLists.txt  example.c  toml11_lib.cpp
src/2.cpplib_exercise/2.cgo_toml11/: CMakeLists.txt  main.go
src/2.cpplib_exercise/3.go_toml11/: CMakeLists.txt  main.go  toml11_lib.h
src/2.cpplib_exercise/3.go_toml11/toml11/: toml11.go
src/5.final_practice/: CMakeLists.txt
src/5.final_practice/cpp/: example.cpp  libBash.h  pybind11.cpp
src/5.final_practice/go/: libBash.go
